--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
 language: ruby
+
+sudo: false
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=4b2589b47b6c66d0995c001ea97af3532ac7291a8fe8daaf110c221b8436765f
+
 rvm:
   - 2.1.5
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
